# deckwatch

./: .env.example  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/app/: config.py  db.py  deps.py  domain.py  init_db.py  main.py  models.py  repository.py  seed.py
backend/app/ingest/: __main__.py  classifier.py  classify.py  dedup.py  geocode.py  pipeline.py  prefilter.py  rules.py  sources.py  verification.py
backend/app/routers/: counties.py  incidents.py  reports.py
backend/fixtures/: counties.json  hotspots.json  incidents.json  sample-feed.xml
backend/tests/: test_api.py  test_domain.py  test_ingest.py
public/data/: kenya-counties.geojson
scripts/: export-seed.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api-docs/: page.tsx
src/app/counties/: page.tsx
src/app/dashboard/: page.tsx
src/app/why/: page.tsx
src/components/dashboard/: CategoryBreakdownChart.tsx  RiskGauge.tsx  StatCard.tsx  TopRiskCounties.tsx  TrendChart.tsx
src/components/filters/: CategoryFilterList.tsx  FilterPanel.tsx
src/components/incidents/: CategoryBadge.tsx  IncidentDetailPanel.tsx  IncidentListItem.tsx  IntelFeedPanel.tsx  SeverityBadge.tsx  VerificationBadge.tsx
src/hooks/: useFilteredIncidents.ts  useIncidents.ts
src/lib/: api-validation.ts  backend.ts  constants.ts  format.ts  geo.ts  incident-filter.ts  incidents-source.ts  search.ts  stats.ts  types.ts
src/store/: useAppStore.ts  useUiStore.ts
(+36 files in other folders)
