[project]
name = "deckwatch-api"
version = "0.1.0"
description = "Deckwatch Kenya incident API (FastAPI + PostgreSQL/PostGIS)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "anthropic>=0.40",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
